--- a/csstyle/styles.css
+++ b/csstyle/styles.css
@@ -4,15 +4,16 @@
 
 /* Cabezera */
 header{
-    background-color: #00ffff;
-    opacity: .7;
-    display: flex;  
+    background-color: #E9EDED;
+    opacity: 1;
+    display: flex;
 }
 
 .TituloNombre {
     margin: auto;
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Spline Sans Mono', monospace;
+    color: #1FC4D4;
 }
 
 .iconosEnlaces{
@@ -24,7 +25,7 @@ header{
 
 .version {
     font-size: 25px;
-    color: aliceblue;
+    color: #E9EDED  ;
     margin: 5px 15px;
     padding: 13px 25px 5px 25px;
     background-color: black;
@@ -33,3 +34,31 @@ header{
     font-family: 'Spline Sans Mono', monospace;
     font-family: 'Yanone Kaffeesatz', sans-serif;
 }
+
+/* Main */
+main{
+    background-color: aquamarine;
+}
+
+.cajas{
+    background-color: black;
+    width: 700px;
+}  
+
+
+
+
+
+
+
+
+
+
+
+
+/* Body */
+
+/* body{
+    background-color: #82efea;
+    background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23006092' fill-opacity='0.5' fill-rule='evenodd'/%3E%3C/svg%3E");
+} */
