--- a/csstyle/styles.css
+++ b/csstyle/styles.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
 
-
+/* *{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+body{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+ */
 /* Cabezera */
+
 header{
     background-color: #E9EDED;
     opacity: 1;
     display: flex;
+    width: 100%;
+    text-align: center;
 }
 
 .TituloNombre {
@@ -36,21 +51,89 @@ header{
 }
 
 /* Main */
-main{
-    background-color: aquamarine;
+
+
+
+/* Pie de pagina */
+footer{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px 0;
+    background-color: #006092;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.cajas{
-    background-color: black;
-    width: 700px;
-}  
+.footer-image{
+    height: 100px;
+    margin-bottom: 1rem;
+}
 
+.social-icons-container, .footer-menu-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
 
+}
 
+.social-icon{
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    border: 1px solid #f2f2f2;
+    background-image: url(/assets/twitter.svg);
+    background-position: center;
+    background-size: 40%;
+    background-repeat: no-repeat;
+    margin: 1rem;
+}
 
+.social-icon:hover{
+    background-color: red;
+    filter: invert(1);
+}
 
+.social-icon:nth-of-type(2){
+    background-image: url(/assets/github.svg);
 
+}
+.social-icon:nth-of-type(3){
+    background-image: url(/assets/linkedin.svg);
+    
+}
+.social-icon:nth-of-type(4){
+    background-image: url(/assets/fav-icon.svg);
+    
+}
 
+.footer-menu-container{
+    list-style-type: none;
+    color: #f2f2f2;
+    font-size: 18px;
+}
+
+.menu-item{
+    margin: 1rem 1.5rem;
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.menu-item:hover{
+    opacity: 1;
+}
+
+.copyright{
+    color: #f2f2f2;
+    opacity: 0.3;
+    text-align: center;
+}
 
 
 
@@ -58,7 +141,3 @@ main{
 
 /* Body */
 
-/* body{
-    background-color: #82efea;
-    background-image: url("data:image/svg+xml,%3Csvg width='84' height='48' viewBox='0 0 84 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h12v6H0V0zm28 8h12v6H28V8zm14-8h12v6H42V0zm14 0h12v6H56V0zm0 8h12v6H56V8zM42 8h12v6H42V8zm0 16h12v6H42v-6zm14-8h12v6H56v-6zm14 0h12v6H70v-6zm0-16h12v6H70V0zM28 32h12v6H28v-6zM14 16h12v6H14v-6zM0 24h12v6H0v-6zm0 8h12v6H0v-6zm14 0h12v6H14v-6zm14 8h12v6H28v-6zm-14 0h12v6H14v-6zm28 0h12v6H42v-6zm14-8h12v6H56v-6zm0-8h12v6H56v-6zm14 8h12v6H70v-6zm0 8h12v6H70v-6zM14 24h12v6H14v-6zm14-8h12v6H28v-6zM14 8h12v6H14V8zM0 8h12v6H0V8z' fill='%23006092' fill-opacity='0.5' fill-rule='evenodd'/%3E%3C/svg%3E");
-} */
