--- a/csstyle/styles.css
+++ b/csstyle/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
 
 /* *{
     margin: 0;
@@ -17,7 +18,7 @@ body{
 /* Cabezera */
 
 header{
-    background-color: #E9EDED;
+    background-color: #1FC4D4;
     opacity: 1;
     display: flex;
     width: 100%;
@@ -30,7 +31,7 @@ header{
     margin: auto;
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Spline Sans Mono', monospace;
-    color: #1FC4D4;
+    color: #ffffff;
 }
 
 .iconosEnlaces{
@@ -44,7 +45,44 @@ header{
 
 /* Main */
 
-.contenedor-uno{
+
+
+.contenedor-description {
+    background-color: #ffffff   ;
+    height: 850px;
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.banner-proyectos {
+    position: relative;
+    width: 100%;
+    height: 75px;
+    background-color: #00ffcc;
+    text-align: center;
+}
+.contenedor-description-imagen{
+    background-color: #29272a;
+    
+}
+
+.contenedor-description-texto{
+    background-color: #0086b3;
+}
+
+
+.banner-texto {
+    padding: 15px;
+    margin: 0;
+    color: #000d1a;
+    font-size: 45px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Spline Sans Mono', monospace;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+
+.contenedor-menu{
     position: relative;
     width: 100%;
     height: 750px;
@@ -72,19 +110,20 @@ header{
     font-size: 40px;
     position: relative;
     padding: 0;
-    margin: 100px 90px 25px 90px;
+    margin: 100px 150px 30px 150px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #E9EDED;
+    color: black;
 }
 
 .principal-uno-boton{
     position: relative;
     font-size: 30px;
     margin: 0px 120px;
-    padding: 15px 0px 15px 30px;
+    padding: 15px;
     background-color: black;
     color: #f2f2f2;
     border-radius: 30px;
+    text-align: center;
 }
 .principal-uno-imagen{
     margin: 40px;
@@ -94,16 +133,16 @@ header{
 
 
 .principal-dos{
-    background-color: green;
+    background-color: #fff;
 }
 .principal-tres{
-    background-color: violet;
+    background-color: #fff;
 }
 .principal-cuatro{
-    background-color: orange;
+    background-color: #fff;
 }
 .principal-cinco{
-    background-color: brown;
+    background-color: #fff;
 }
 
 
