--- a/csstyle/styles.css
+++ b/csstyle/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Raleway:ital,wght@1,100&family=Spline+Sans+Mono:wght@500&family=Yanone+Kaffeesatz:wght@300&display=swap');
 
 /* *{
     margin: 0;
@@ -62,13 +63,20 @@ header{
     background-color: #00ffcc;
     text-align: center;
 }
-.contenedor-description-imagen{
+.contenedor-description-texto{
     background-color: #29272a;
-    
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
-.contenedor-description-texto{
+.contenedor-description-imagen{
     background-color: #0086b3;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -83,10 +91,10 @@ header{
 }
 
 .contenedor-menu{
-    position: relative;
+    
+    position: flex;
     width: 100%;
     height: 750px;
-    background-color: yellow;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     
@@ -98,52 +106,41 @@ header{
     width: 100%;
 }
 
-.principal-uno{
-    background-color: #8CF817;
+.empty{
+    background-color: #343434;
+    
+    
 }
 
-.principal-uno:hover{
+/* .principal-uno:hover{
     transition: 2s;
     background-color: skyblue;
-}
-.principal-uno-texto{
-    font-size: 40px;
-    position: relative;
-    padding: 0;
-    margin: 100px 150px 30px 150px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: black;
-}
+} */
+    /* .principal-uno-texto{
+        font-size: 40px;
+        position: relative;
+        padding: 0;
+        margin: 100px 150px 30px 150px;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        color: black;
+    }
 
-.principal-uno-boton{
-    position: relative;
-    font-size: 30px;
-    margin: 0px 120px;
-    padding: 15px;
-    background-color: black;
-    color: #f2f2f2;
-    border-radius: 30px;
-    text-align: center;
-}
-.principal-uno-imagen{
-    margin: 40px;
-    width: 80%;
-}
+    .principal-uno-boton{
+        position: relative;
+        font-size: 30px;
+        margin: 0px 120px;
+        padding: 15px;
+        background-color: black;
+        color: #f2f2f2;
+        border-radius: 30px;
+        text-align: center;
+    }
+    .principal-uno-imagen{
+        margin: 40px;
+        width: 80%;
+    } */
 
 
-
-.principal-dos{
-    background-color: #fff;
-}
-.principal-tres{
-    background-color: #fff;
-}
-.principal-cuatro{
-    background-color: #fff;
-}
-.principal-cinco{
-    background-color: #fff;
-}
 
 
 /* Pie de pagina */
@@ -237,9 +234,34 @@ footer{
     text-align: center;
 }
 
+.profile-text {
+    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Spline Sans Mono', monospace;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 38px;
 
+    color: #E9EDED;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 35ch;
 
+    animation: typing 2s steps(35), blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
 
+.imagen-perfil {
+    border-radius: 50%;
+}
+
+@keyframes typing {
+    from { width: 0}
+}
+
+@keyframes blink {
+    50% {border-color: transparent}
+}
 
 /* Body */
 
